# optd

./: .gitignore  BatchInsert.java  README  README.md  readme  settings.py  urls.py  using.txt
base/: airlines.ref  airport_airline.ref  countries.csv  reference_nodes.ref
docs/: .buildinfo  engine.html  engine_views.html  first.html  folders.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: first.txt  folders.txt  index.txt
engine/: manager.py  tests.py  urls.py  views.py
media/css/: error.css  main.css
media/js/: node.js  search.js
plugins/: BatchInsert.java
plugins/BatchInsert/: BatchInsert.java
plugins/neo4j-customquery-plugin/: .classpath  .project  pom.xml
refdata/ACI/: ACI_2007_Traffic_Report.csv
refdata/IATA/: README  iata_airport_list_2010_06_29.txt  iata_airport_list_2011_07.txt  iata_airport_list_2012_04_06.csv
refdata/Innovata/: innovata_stations.csv  (+1 more)
refdata/ORI/: README  (+39 more)
refdata/trep/admin/: Makefile.am  create_and_fill_trep_db.sh  create_geo_geonames_db.sql  create_geo_user.sh  create_geo_user.sql  create_table_places.sql  drop_tables_from_trep_db.sh  export_ref_data.sh  export_ref_data.sql  export_ref_place_details.sql  export_ref_place_names.sql  fill_table_airport_popularity.sql  fill_table_places.sql  getClosestAirports.sh  ref_airport_popularity.csv  ref_city.csv  ref_city2.csv  ref_place_details.csv  ref_place_names.csv  sources.mk  uptade_db_01.sh
sql/: create_tables.sql  queries_test.sql
templates/: 404.html  500.html  505.html  base.html
(+179 files in other folders)
